@@ -155,11 +155,14 @@ if ($result1) {
       <div>
         <span id="newmainmenu" onclick="$('#traymenu').hide();
           $('#mainmenu').toggle();event.stopPropagation();"> MENU </span>
-        <p id="lognote"></p>
+        <span id="mmbutton" onclick="window.location = 'board18Market.php?dogame='
+          + BD18.gameID;">Market</span>
+        <span id="ambutton" onclick="acceptMove();">AM</span>         
+        <p id="lognote" style="left:338px"></p>
         <div id="mainmenu" class="menu">
           <ul class="bigMenu">
             <li onclick="acceptMove();" class="active move" style="display:none;">
-              Accept Move(Enter)</li>
+              Accept Move [AM](Enter)</li>
             <li onclick="cancelMove();" class="active move" style="display:none;">
               Cancel Move(C)</li>
             <li onclick="historyMove(-1);" class="no move undo grey">Undo Move(Z)</li>
