@@ -1,3 +1,8 @@
+BOARD18 2.7.8 Release Notes
+ 
+Changes from 2.7.7 Release:
+Implemented fix for Issue 219 - "Accept Move"&"Map/Market" Buttons 
+
 BOARD18 2.7.7 Release Notes
  
 Changes from 2.7.6 Release:
